0.5.3 Feature Release
---------------------
* Changed the SortManager so that the NSTableView takes up the entire window, 
  and also, made it resizable. I was testing it the other day and the lack of 
  resizing screwed things up.
* Allow drag and drop reordering in the Sort Manager Preferences.

0.5.2 Feature Release
---------------------
* You can now drag image files and folders to the VitaminSEE icon. I've
  registered VitaminSEE as a handler for folders, JPEGS, GIFs and TIFFs. Now
  all I need to do if figure out how to reigster with the Finder's "Open 
  With..." menu...

0.5.1 Bugfix Release
--------------------
* Fixed displaying of wrong filesize on files over 1 Megabyte.
* Fixed CRITICAL memory leak in thumbnailing code that was causing the program
  to crash.

0.5 Final
---------
* Cosmetic changes (HIG compliance)
* Add a "Known Issues" page to the help
* Make the GPL a Help menu item

0.5 Release Canidate 2
----------------------
* Fixed deadlock that would occur every half hour or so.