@@ -1,0 +1,14 @@
+<html>
+        <head>
+                <title>Credits</title>
+        </head>
+        <body>
+		<center>
+        <font size="4"><p>By <a href="mailto:glaysher@umich.edu">Elliot Glaysher</a></p></font>
+		VitaminSEE uses the following open code:
+		<a href="http://homepage.mac.com/troy_stephens/software/objects/IconFamily/">IconFamily</a> by Troy Stephens<br>
+		<a href="http://home.arcor.de/ahuggel/exiv2">Exiv2</a> by Andreas Huggel<br>
+		<a href="http://www.scotlandsoftware.com/">Preferences Controller</a> by Matt Gemmell<br>
+		</center>
+	</body>
+</html>
