@@ -1,26 +1,0 @@
-{\rtf1\mac\ansicpg10000\cocoartf102
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\qc
-
-\f0\fs24 \cf0 By Elliot Glaysher <glaysher@umich.edu>\
-\
-Uses IconFamily by Troy Stephens\
-
-\fs20 <http://homepage.mac.com/troy_stephens/software/objects/IconFamily/>
-\fs24 \
-\
-Uses Exiv2 by Andreas Huggel\
-
-\fs20 <http://home.arcor.de/ahuggel/exiv2>
-\fs24 \
-\
-Uses Preferences Controller code by Matt Gemmell\
-
-\fs20 <http://www.scotlandsoftware.com/>\
-\
-(The application icon is a composite of the Crystal Magnifying glass and my own background)\
-(Also  uses lots of random snippets from Apple's sample code and stuff from mailing lists and cocoadev.net)\
-\
-
-\fs22     This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.}
