@@ -15,6 +15,7 @@
 			<p><b>Startup Folder</b>: This is the folder that is displayed when VitaminSEE is first started. By default, it is set to your Pictures folder. Clicking "Change" will bring up an "Open" box to select a new directory.</p>
 			<p><b>Smooth Images</b>: This option controls the amount of smoothing applied to the Image. "No Smoothing" disables smoothing. This is the fastest setting, but results in the lowest quality. "Low Smoothing" and "High Smoothing" display the image twice--first without smoothing for speed and then secondly with smoothing for final display.</p>
 			<p>Due to limitations in Cocoa, smoothing is not applied to animated images.</p>
+			<p><b>Preload Images</b>: This options controls whether VitaminSEE will load the next image into memory while displaying the current image. Usually, this improves speed, but on computers with little free memory, it can slow things down while browsing through folders that mainly contain large (greater then 1MB) images. It is checked by default.</p>
 			<p><b>Generate Thumbnails</b>: If this option is checked, thumbnails will be generated and used for images that don't have them. Otherwise, thumbnails aren't generated.</p>
 		</div>
 	</body>
